# AdventOfCode2021

./: .gitignore  .justfile  Cargo.toml  LICENSE.md  README.md  get
day_02/src/: main.rs
day_03/src/: helpers.rs
day_04/src/: main.rs
day_05/src/: main.rs
day_06/src/: main.rs
day_07/src/: main.rs
day_1/src/: main.rs
day_10/src/: main.rs
day_11/src/: main.rs
day_12/: Cargo.toml
day_12/src/: main.rs
day_13/src/: main.rs
day_14/: Cargo.toml
day_14/src/: main.rs
day_15/: Cargo.toml
day_15/src/: main.rs
day_16/src/: main.rs
day_2/src/: main.rs
day_3/src/: main.rs
day_4/: Cargo.toml
day_4/src/: board.rs  main.rs
day_5/src/: vents.rs
day_6/src/: main.rs
day_7/src/: main.rs
day_8/src/: main.rs
day_9/src/: main.rs
src/: lib.rs  main.rs  template.rs
