[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[dependencies]
itertools = "0.10"
hashbrown = "0.13.1"
petgraph = "0.6.2"

# main.rs dependencies
regex = "1.7"
once_cell = "1.16"

# lib proc-macro dependencies
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
